@@ -5,6 +5,9 @@ IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.  EV
 GOES INTO TRUNK AND WILL BE MERGED INTO STABLE BY VALARIS AND WIZPUTER. -- VALARIS
 
 2006/03/22
+	* Some cleanups in irc.c [Skotlex]
+	* Magic skills that ignore element now also don't take into account
+	  elemental cards. [Skotlex]
 	* Fixed compiler warnings in battle.c [Lance]
 	* Changes by [reddozen] -->
 		- Updated Full Buster's damage, status effects, and skill levels
