@@ -581,7 +581,7 @@
 //-- ASC_EDP
 378,0,2000,0,20000:30000:40000:50000:60000,20000:30000:40000:50000:60000
 //-- ASC_BREAKER
-379,1000,1000:1200:1400:1600:1800:2000:2200:2400:2600:2800,0,0,0
+379,700,1000:1200:1400:1600:1800:2000:2200:2400:2600:2800,0,0,0
 //==========================================
 
 
